Expose optional ranked eval results [skip ci]
